--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.application.name=naming-server
+server.port=8761
 
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+eureka.instance.prefer-ip-address=true
+eureka.renewalPercentThreshold=0.85
+
+spring.security.basic.enabled=true
+spring.security.user.name=eurekauser
+spring.security.user.password=eureka!
