Delete service if down

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,20 @@ server.port=8761
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=true
-eureka.renewalPercentThreshold=0.85
+
+eureka.server.eviction-interval-timer-in-ms=30000
+eureka.server.renewal-percent-threshold=0.85
+eureka.server.renewal-threshold-update-interval-ms=60000
+eureka.server.enable-self-preservation=false
+eureka.server.expected-client-renewal-interval-seconds=30
+eureka.client.instance-info-replication-interval-seconds=1
+
+eureka.instance.lease-expiration-duration-in-seconds=0
+
+eureka.environment=Development
 
 spring.security.basic.enabled=true
 spring.security.user.name=eurekauser
